# callfwd

./: .bazelrc  .clangd  .dockerignore  .gitignore  CMakeLists.txt  README.md  WORKSPACE  build-centos.sh  callfwd.service  callfwd.socket  callfwdctl  sipp.sh
bazel/: cc.bzl
callfwd/: ACL.cpp  ACL.h  AccessLog.cpp  AccessLog.h  AccessLogHandler.cpp  ApiHandler.cpp  ApiHandler.h  ApiServer.cpp  CMakeLists.txt  CallFwd.cpp  CallFwd.h  Control.cpp  Control.h  PhoneMapping.cpp  PhoneMapping.h  SipHandler.cpp  SipTest.cpp
callfwd/test/: CMakeLists.txt  PhoneMappingTest.cpp
conf/: callfwd-acl.service  callfwd-acl.timer  callfwd-reload.service  callfwd-reload.timer  callfwd-update-acl.service  callfwd-update-acl.timer  callfwd.env  callfwd.flags  callfwd.service  callfwd.socket  logrotate.conf  update_acl.sh
data/: SIP-invite-result.txt  SIP-invite.txt  SIP-options.txt  SIP-real.txt  acl.txt  dups.txt  new.txt  sipp-scenario.xml  target.query  uids.csv
docker/: centos-builder.Dockerfile  ubuntu-builder.Dockerfile
docker/builder/: Dockerfile
echo/: CMakeLists.txt
echo/test/: CMakeLists.txt  EchoHandlerTest.cpp
lib/: CMakeLists.txt
lib/osips_parser/: CMakeLists.txt  core_stats.h  dprint.h  mem.h  msg_parser.c  msg_parser.h  parse_allow.h  parse_authenticate.c  parse_body.c  parse_body.h  parse_call_info.c  parse_cseq.c  parse_disposition.c  parse_disposition.h  parse_diversion.c  parse_event.h  parse_expires.c  parse_fline.c  parse_fline.h  parse_from.c  parse_methods.h  parse_nameaddr.h  parse_pai.c  parse_ppi.c  parse_privacy.c  parse_replaces.c  parse_sipifmatch.c  parse_sst.c  parse_supported.c  parse_to.c  parse_to.h  parse_uri.c  parse_uri.h  parse_via.h  strcommon.c  ut.h
lib/osips_parser/contact/: contact.h  parse_contact.h
lib/osips_parser/digest/: digest.c  digest_parser.c
lib/test/: CMakeLists.txt  TestAsyncTransport.cpp  TestMain.cpp
osips_parser/: BUILD  dprint.h  error.c  hf.c  hf.h  ip_addr.h  parse_allow.c  parse_content.c  parse_cseq.h  parse_event.c  parse_expires.h  parse_fcaps.c  parse_fline.c  parse_hname2.c  parse_list_hdr.c  parse_list_hdr.h  parse_methods.c  parse_min_expires.c  parse_nameaddr.c  parse_param.c  parse_param.h  parse_privacy.h  parse_refer_to.c  parse_rpid.c  parse_rr.c  parse_sipifmatch.h  parse_supported.h  parse_via.c  parser_f.c  parser_f.h  statistics.h  strcommon.h  ut.h
osips_parser/contact/: contact.c  parse_contact.c
osips_parser/digest/: digest_parser.h  param_parser.c  param_parser.h
osips_parser/sdp/: sdp_helpr_funcs.h
pthash/: BUILD  essentials.hpp  partitioned_phf.hpp  pthash.hpp  single_phf.hpp
pthash/builders/: internal_memory_builder_single_phf.hpp  search.hpp  util.hpp
pthash/encoders/: bit_vector.hpp  compact_vector.hpp
pthash/utils/: hasher.hpp  util.hpp
runtime/: ACL.cpp  AccessLog.cpp  BUILD  CallFwd.cpp  Control.cpp  Location.cpp  Location.h  PhoneMapping.cpp  PhoneMapping.h  SipHandler.cpp
stir/: CMakeLists.txt  Passport.cpp  Passport.h  Sandbox.cpp  Stir.cpp  StirApiHandler.cpp  StirApiTypes.cpp  StirApiTypes.h
stir/test/: CMakeLists.txt  StirApiTest.cpp
storage/: BUILD  bit_magic.hpp  builder.cpp  cmd.hpp  cmd_convert.cpp  cmd_convert.hpp  cmd_convert_internal.hpp  cmd_partition.cpp  cmd_partition.hpp  cmd_partition_internal.hpp  cmd_pthash.cpp  cmd_pthash.hpp  cmd_pthash_internal.hpp  compute_kernels.cpp  compute_kernels.hpp  csv_reader.cpp  csv_reader.hpp  csv_records.hpp  lrn_schema.hpp  pn_ordered_join.cpp  pn_ordered_join.hpp  pn_ordered_join_internal.hpp  pthash_bucketer.hpp  pthash_partitioner.cpp  pthash_partitioner.hpp  pthash_partitioner_internal.hpp
tools/: BUILD  cmake_configure_file.bzl  cmake_configure_file.py
tools/remote-toolchains/: BUILD.bazel
tools/remote-toolchains/ubuntu-act-22-04/local_config_cc/: BUILD
